--- a/src/app/budget-list/budget-list.html
+++ b/src/app/budget-list/budget-list.html
@@ -1,5 +1,5 @@
 <div class="total-savings">
-  Total savings:
+  Total Expenses:
   {{ totalSavings() | currency : "EUR" : "symbol" : "1.2-2" }}
 </div>
 @for (b of budgetsArray; track b.id) {
